# sw-demo

./: README.md
ab_testing/bayesian/: ModellingAlternativesAssumptions.md  README.md  build.sh  pyproject.toml
ab_testing/bayesian/notebooks/: main.html  main.ipynb
ab_testing/freq/: README.md  build.sh  pyproject.toml
ab_testing/freq/helpers/: analyse_results.py  eda.py  preprocess_data.py  settings.py  visualise_results.py
ab_testing/freq/notebooks/: main.html  main.ipynb
ab_testing/src/helpers/: analyse_results.py  build_beta_binomial.py  diagnose_distributions.py  eda.py  preprocess_data.py  visualise_results.py
clickhouse/: QueryResults.md  README.md
clickhouse/sql/analytical_queries/: query_1.sql  query_2.sql  query_2_optimized.sql  query_3.sql  query_3_optimized.sql
clickhouse/sql/data/: create_fact_table.md  create_fact_table.sql  create_fx_table.md  create_fx_table.sql  insert_exchange_rates.sql
clickhouse/sql/preaggregations/: mvw_fact_with_eur_conversions.md  mvw_fact_with_eur_conversions.sql  mvw_first_installs.sql  mvw_user_daily_history.sql
clickhouse/sql/queries/: query_1.sql  query_2.sql  query_3.sql
clickhouse/sql/transformations/: mv_eur_conversions.sql
postgres/: .gitignore  README.md  connect.sh  pyproject.toml
postgres/sql/analytical_queries/: query_2.sql  query_3.sql
postgres/sql/data/: create_fct_table.sql  create_fx_table.sql  insert_exchange_rates.sql  insert_into_fct_table.sql
postgres/sql/queries/: query_1.sql
sql/data/: create_fact_table.sql  populate_fact_table.sql
(+4 files in other folders)
