[project]
name = "bayesian"
version = "0.1.0"
description = "A dashboard-like jupyter notebook containing a Bayesian analysis of an A/B test"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "dotenv>=0.9.9",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pymc>=5.22.0",
    "seaborn>=0.13.2",
]
